make the broadcast;reg;init commands to work

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ repositories {
 
 dependencies {
 
+    // https://mvnrepository.com/artifact/log4j/log4j
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '4.26.0'
 
